fix ui kit flex-wrap

--- a/app/css/core/uikit/uikit.scss
+++ b/app/css/core/uikit/uikit.scss
@@ -350,6 +350,7 @@
 
   &-row {
     display: flex;
+    flex-wrap: wrap;
     width: 100%;
     padding-left: 1px;
     @include mobile {
